Fixed a small admin CSS issue where the "Save and continue editing" and "Save and add another" buttons were wrongly aligned with left-to-right languages in IE7.
git-svn-id: http://code.djangoproject.com/svn/django/trunk@16683 bcc190cf-cafb-0310-a4f2-bffc1f526a37

--- a/django/contrib/admin/static/admin/css/forms.css
+++ b/django/contrib/admin/static/admin/css/forms.css
@@ -356,3 +356,9 @@ body.popup .submit-row {
 .empty-form {
     display: none;
 }
+
+/* IE7 specific bug fixes */
+
+.submit-row input {
+    float: right;
+}
